force-app/main/default/objects/NCMT_Contractor__c/NCMT_Contractor__c.object-meta.xml
<CustomObject>
    <label>NCMT SubContractor</label>
    <nameField>
        <label>NCMT SubContractor Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT SubContractor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>