force-app/main/default/objects/NCMT_Contractor__c/fields/Bond__c.field-meta.xml
<CustomField>
    <fullName>Bond__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Bond</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>