force-app/main/default/objects/NCMT_Contractor__c/fields/Contractor_Description__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Description__c</fullName>
    <label>Subcontractor Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>