force-app/main/default/objects/NCMT_Contractor__c/fields/Overhead__c.field-meta.xml
<CustomField>
    <fullName>Overhead__c</fullName>
    <defaultValue>0.10</defaultValue>
    <label>Overhead</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>