force-app/main/default/objects/NCMT_Contractor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contractor_Description__c</columns>
    <columns>Overhead__c</columns>
    <columns>Profit__c</columns>
    <columns>Bond__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>