force-app/main/default/objects/NCMT_Contractor__c/listViews/FY_2021.listView-meta.xml
<ListView>
    <fullName>FY_2021</fullName>
    <columns>NAME</columns>
    <columns>Contractor_Description__c</columns>
    <columns>Overhead__c</columns>
    <columns>Profit__c</columns>
    <columns>Bond__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2021</value>
    </filters>
    <label>FY-2021</label>
</ListView>