force-app/main/default/objects/NCMT_Contractor__c/listViews/FY_2023.listView-meta.xml
<ListView>
    <fullName>FY_2023</fullName>
    <columns>NAME</columns>
    <columns>Contractor_Description__c</columns>
    <columns>Overhead__c</columns>
    <columns>Profit__c</columns>
    <columns>Bond__c</columns>
    <columns>Fiscal_Year__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>FY-2023</label>
</ListView>